--- a/src/components/todo-list/todo-list.module.css
+++ b/src/components/todo-list/todo-list.module.css
@@ -1,30 +1,3 @@
-.card__wrapper {
-  display: flex;
-  justify-content: flex-start;
-  padding: 24px;
-  border-radius: 8px;
-  background-color: #f7e8fd;
-  min-width: 320px;
-  width: 100%;
-}
-
-.card__wrapper fieldset {
-  border: none;
-  padding: 0;
-  margin: 0;
-  width: inherit;
-  display: flex;
-}
-
-.card__wrapper input {
-  border: none;
-  background-color: transparent;
-  width: inherit;
-  border: none;
-  height: inherit;
-  font-size: inherit;
-}
-
 .visually__hidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
@@ -33,4 +6,14 @@
   clip: rect(0 0 0 0); /* Legacy property for Internet Explorer */
   clip-path: inset(50%);
   white-space: nowrap;
+}
+
+.card__wrapper {
+  display: flex;
+  justify-content: flex-start;
+  padding: 24px;
+  border-radius: 8px;
+  background-color: #f7e8fd;
+  min-width: fit-content;
+  width: 100%;
 }
